updated containers for flexbox however have not solved alignment issue yet. Has fixed width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,19 +21,19 @@ h3 {
     text-align: left;
 }
 
-h2,
+/* h2,
 h3,
 a,
 ul,
 li,
 p {
     margin-left: 52px;
-}
+} */
 
 /* Product */
 .product {
     border: 5px solid black;
-    width: 1300px;
+    width: 1350px;
     margin: 75px auto;
     position: relative;
 }
@@ -44,12 +44,12 @@ p {
     text-transform: uppercase;
     background-color: rgba(88, 88, 88, 0.564);
     padding: 25px;
-    /* position: relative; */
 }
 
 .img-container {
+    display: flex;
+    justify-self: flex-start;
     margin-bottom: 0;
-    /* display: inline-block; */
 }
 
 
@@ -137,10 +137,6 @@ p {
     display: inline-block;
 }
 
-/* .more-info:visited {
-    color: rgb(255, 0, 0);
-} */
-
 .more-info:hover,
 .more-info:active {
     color: rgb(0, 0, 0);
@@ -185,7 +181,7 @@ p {
     width: 30px;
     filter: blur;
     border-radius: 50px;
-    margin-right: 15px;
+    margin-right: 10px;
     display: inline-block;
 }
 
@@ -281,41 +277,21 @@ p {
     float: left;
 } */
 
-/* flexbox */
-.item-details-wrapper {
+
+
+
+/* FLEXBOX */
+
+.item-details-wrapper,
+.features-container {
+    display: block;
+    width: auto;
+    width: 350px;
+    /* flex: 1; */
+}
+
+.details-wrapper {
     display: flex;
     justify-content: flex-end;
-}
-
-.img-container {
-    display: flex;
-    justify-content: flex-start;
-
-}
-
-.price-container {
-    display: flex;
-    justify-content: flex-end;
-}
-
-.price-container {
-    width: 500px;
-}
-
-.color-div {
-    display: inline-flex;
-    justify-content: flex-end;
-}
-
-/* .shipping {
-    margin-left:
-} */
-
-.price-container {
-    margin-top: 40px;
-}
-
-.features-flexbox {
-    display: flex;
-    justify-content: flex-end;
+    align-items: flex-start;
 }
